tool-output/cppcheck/sist2_cpp.txt
Checking sist2/scripts/sqlite_extension.c ...
1/40 files checked 0% done
Checking sist2/src/auth0/auth0_c_api.cpp ...
2/40 files checked 0% done
Checking sist2/src/cli.c ...
3/40 files checked 5% done
Checking sist2/src/ctx.c ...
4/40 files checked 5% done
Checking sist2/src/database/database.c ...
Checking sist2/src/database/database.c: SIST_DEBUG...
5/40 files checked 11% done
Checking sist2/src/database/database_embeddings.c ...
6/40 files checked 12% done
Checking sist2/src/database/database_fts.c ...
7/40 files checked 19% done
Checking sist2/src/database/database_schema.c ...
Checking sist2/src/database/database_schema.c: SIST_DEBUG...
8/40 files checked 20% done
Checking sist2/src/database/database_stats.c ...
9/40 files checked 22% done
Checking sist2/src/index/elastic.c ...
sist2/src/index/elastic.c:140:13: error: Common realloc mistake: 'buf' nulled but not freed upon failure [memleakOnRealloc]
            GROW_BUF(action_str_len + line_len);
            ^
sist2/src/index/elastic.c:155:13: error: Common realloc mistake: 'buf' nulled but not freed upon failure [memleakOnRealloc]
            GROW_BUF(action_str_len);
            ^
sist2/src/index/elastic.c:164:9: error: Common realloc mistake: 'buf' nulled but not freed upon failure [memleakOnRealloc]
        buf = realloc(buf, buf_capacity + 1);
        ^
10/40 files checked 26% done
Checking sist2/src/index/web.c ...
11/40 files checked 28% done
Checking sist2/src/io/serialize.c ...
12/40 files checked 29% done
Checking sist2/src/io/walk.c ...
13/40 files checked 30% done
Checking sist2/src/log.c ...
14/40 files checked 31% done
Checking sist2/src/main.c ...
15/40 files checked 36% done
Checking sist2/src/parsing/magic_util.c ...
16/40 files checked 36% done
Checking sist2/src/parsing/mime.c ...
17/40 files checked 36% done
Checking sist2/src/parsing/mime_generated.c ...
18/40 files checked 54% done
Checking sist2/src/parsing/parse.c ...
19/40 files checked 56% done
Checking sist2/src/tpool.c ...
20/40 files checked 58% done
Checking sist2/src/util.c ...
sist2/src/util.c:36:9: error: Common realloc mistake: 'abs' nulled but not freed upon failure [memleakOnRealloc]
        abs = realloc(abs, strlen(abs) + 1);
        ^
21/40 files checked 60% done
Checking sist2/src/web/serve.c ...
Checking sist2/src/web/serve.c: SIST_DEBUG...
Checking sist2/src/web/serve.c: SIST_DEBUG_INFO...
22/40 files checked 66% done
Checking sist2/src/web/web_fts.c ...
23/40 files checked 69% done
Checking sist2/src/web/web_util.c ...
24/40 files checked 69% done
Checking sist2/third-party/libscan/libscan/arc/arc.c ...
25/40 files checked 71% done
Checking sist2/third-party/libscan/libscan/comic/comic.c ...
26/40 files checked 72% done
Checking sist2/third-party/libscan/libscan/ebook/ebook.c ...
Checking sist2/third-party/libscan/libscan/ebook/ebook.c: EBOOK_LOCKS...
27/40 files checked 75% done
Checking sist2/third-party/libscan/libscan/font/font.c ...
28/40 files checked 77% done
Checking sist2/third-party/libscan/libscan/json/json.c ...
sist2/third-party/libscan/libscan/json/json.c:48:5: error: Common realloc mistake: 'buf' nulled but not freed upon failure [memleakOnRealloc]
    buf = realloc(buf, buf_len);
    ^
29/40 files checked 78% done
Checking sist2/third-party/libscan/libscan/media/media.c ...
30/40 files checked 84% done
Checking sist2/third-party/libscan/libscan/mobi/scan_mobi.c ...
31/40 files checked 85% done
Checking sist2/third-party/libscan/libscan/msdoc/msdoc.c ...
32/40 files checked 85% done
Checking sist2/third-party/libscan/libscan/ooxml/ooxml.c ...
33/40 files checked 87% done
Checking sist2/third-party/libscan/libscan/raw/raw.c ...
34/40 files checked 89% done
Checking sist2/third-party/libscan/libscan/text/text.c ...
35/40 files checked 89% done
Checking sist2/third-party/libscan/libscan/util.c ...
36/40 files checked 89% done
Checking sist2/third-party/libscan/libscan/wpd/libwpd_c_api.cpp ...
37/40 files checked 91% done
Checking sist2/third-party/libscan/libscan/wpd/wpd.c ...
38/40 files checked 91% done
Checking sist2/third-party/libscan/test/main.cpp ...
39/40 files checked 99% done
Checking sist2/third-party/libscan/test/test_util.cpp ...
40/40 files checked 100% done
